--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client" : "npm start --prefix client",
-    "dev" : "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Keshav Vinayak Jha",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "concurrently": "^4.1.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.5"
