--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.5"
+    "graphql": "^14.5.5",
+    "moment": "^2.24.0",
+    "react-moment": "^0.9.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
