--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.5",
     "moment": "^2.24.0",
-    "react-moment": "^0.9.2"
+    "react-moment": "^0.9.2",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
